--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# docker scripts
+.bash_history
+coding-style-reports.log
+
+# executable
+myftp
